tests/errors/repro_9094.f90
subroutine foo(a)
    real :: a(*, 10) ! error: star not in last dim
end subroutine